roles/ks-multicluster/files/kubefed/validation/cluster.kubefed.kubesphere.io.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: cluster.kubefed.kubesphere.io
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURmekNDQW1lZ0F3SUJBZ0lVQ1Z6TFZGS3R0WGhtSE51dm5USWJ1bVJxVUhvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1R6RUxNQWtHQTFVRUJoTUNRMDR4Q3pBSkJnTlZCQWdNQWtoQ01STXdFUVlEVlFRS0RBcExWVUpGVTFCSQpSVkpGTVI0d0hBWURWUVFEREJWcmN5MWpiMjUwY205c2JHVnlMVzFoYm1GblpYSXdIaGNOTWpBd09ESTNNVFkxCk1ESTFXaGNOTkRnd01URXpNVFkxTURJMVdqQlBNUXN3Q1FZRFZRUUdFd0pEVGpFTE1Ba0dBMVVFQ0F3Q1NFSXgKRXpBUkJnTlZCQW9NQ2t0VlFrVlRVRWhGVWtVeEhqQWNCZ05WQkFNTUZXdHpMV052Ym5SeWIyeHNaWEl0YldGdQpZV2RsY2pDQ0FTSX [...]
    service:
      name: ks-controller-manager
      namespace: kubesphere-system
      path: /validate-member-cluster-kubefed-io-v1alpha1
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: cluster-join.core.kubefed.io
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector: {}
  rules:
  - apiGroups:
    - core.kubefed.io
    apiVersions:
    - v1beta1
    - v1alpha1
    operations:
    - CREATE
    resources:
    - kubefedclusters
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
